@@ -6,6 +6,7 @@ import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @AllArgsConstructor
 @Component
@@ -14,6 +15,7 @@ public class TechnologyMapper {
     private final TechnologyManagementData technologyManagementData;
 
     public static List<String> technologiesToListString(List<Technology> technologies) {
+
         return technologies.stream().map((Technology::getTechnologyName))
                 .toList();
     }
@@ -21,6 +23,6 @@ public class TechnologyMapper {
     public List<Technology> technologiesStringToTechnologyList(List<String> technologies) {
         return technologies.stream()
                 .map(technologyManagementData::getTechnologyByName)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
